@@ -52,10 +52,7 @@ class DependencyRemovalTest extends KernelTestBase {
     parent::setUp();
 
     $this->installEntitySchema('search_api_task');
-
-    \Drupal::configFactory()->getEditable('search_api.settings')
-      ->set('default_tracker', 'default')
-      ->save();
+    $this->installConfig('search_api');
 
     // Create the index object, but don't save it yet since we want to change
     // its settings anyways in every test.
@@ -499,9 +496,7 @@ class DependencyRemovalTest extends KernelTestBase {
 
     // When the index resets the tracker, it needs to know the ID of the default
     // tracker.
-    \Drupal::configFactory()->getEditable('search_api.settings')
-      ->set('default_tracker', 'default')
-      ->save();
+    $this->installConfig('search_api');
 
     // Disabling modules in Kernel tests normally doesn't trigger any kind of
     // reaction, just removes it from the list of modules (for example, to avoid
