@@ -76,6 +76,7 @@ class LanguageKernelTest extends KernelTestBase {
     $this->installEntitySchema('search_api_task');
     $this->installEntitySchema('field_storage_config');
     $this->installEntitySchema('field_config');
+    $this->installConfig('search_api');
 
     // Create the default languages.
     $this->installConfig(['language']);
@@ -114,12 +115,6 @@ class LanguageKernelTest extends KernelTestBase {
     if (!Utility::isRunningInCli()) {
       \Drupal::state()->set('search_api_use_tracking_batch', FALSE);
     }
-
-    // Set tracking page size so tracking will work properly.
-    \Drupal::configFactory()
-      ->getEditable('search_api.settings')
-      ->set('tracking_page_size', 100)
-      ->save();
 
     // Create a test server.
     $this->server = Server::create([
